versioned_docs/version-6.0.0/angular/forms/button.md
---
sidebar_position: 1
sidebar_label: Button
displayed_sidebar: angularSidebar
description: 'Use the Mobiscroll Button component in Angular — styles, variants, icons, loading states, and API for handling click events.'
---

import Options from '../\_auto-generated/button/options.md';
import Events from '../\_auto-generated/button/events.md';
import Localizations from '../\_auto-generated/button/localizations.md';

# Button

The Button component is an interactive element activated by the user.
Once activated, it performs an action, such as submitting a form or opening a dialog.

## Usage

Buttons can display text, icons, or both. They can be colored and styled with various options.

#### Button styles

```html title="Button variations"
<mbsc-button>Standard button</mbsc-button>
<mbsc-button variant="flat">Flat button</mbsc-button>
<mbsc-button variant="outline">Outline button</mbsc-button>

<mbsc-button startIcon="home">With start icon</mbsc-button>
<mbsc-button endIcon="home">With end icon</mbsc-button>
<mbsc-button icon="pencil" ariaLabel="Icon only"></mbsc-button>

<mbsc-button color="primary">Primary button</mbsc-button>
<mbsc-button color="secondary">Secondary button</mbsc-button>
<mbsc-button color="success">Success button</mbsc-button>
<mbsc-button color="danger">Danger button</mbsc-button>
<mbsc-button color="warning">Warning button</mbsc-button>
<mbsc-button color="info">Info button</mbsc-button>
<mbsc-button color="light">Light button</mbsc-button>
<mbsc-button color="dark">Dark button</mbsc-button>
```

```ts
import { Component } from '@angular/core';
import { MbscModule } from '@mobiscroll/angular';

@Component({
  selector: 'app-root',
  templateUrl: './app.component.html',
  standalone: true,
  imports: [MbscModule],
})
export class AppComponent {}
```

#### Button sizes and groups

```html
<!-- Full width button -->
<mbsc-button class="mbsc-button-block">Full width Button</mbsc-button>

<!-- Button group -->
<div class="mbsc-button-group">
    <mbsc-button>Button 1</mbsc-button>
    <mbsc-button>Button 2</mbsc-button>
    <mbsc-button>Button 3</mbsc-button>
</div>

<!-- Justified group -->
<!-- Buttons are streched to fill the full width of the container -->
<div class="mbsc-button-group-justified">
    <mbsc-button>Button 1</mbsc-button>
    <mbsc-button>Button 2</mbsc-button>
    <mbsc-button>Button 3</mbsc-button>
</div>

<!-- Full width group -->
<!-- Each button fills the whole width of the container -->
<div class="mbsc-button-group-block">
    <mbsc-button>Button 1</mbsc-button>
    <mbsc-button>Button 2</mbsc-button>
    <mbsc-button>Button 3</mbsc-button>
</div>
```

```ts
import { Component } from '@angular/core';
import { MbscModule } from '@mobiscroll/angular';

@Component({
  selector: 'app-root',
  templateUrl: './app.component.html',
  standalone: true,
  imports: [MbscModule],
})
export class AppComponent {}
```

## Handling clicks

Clicks can be handled using the standard `click` event.

```html
<mbsc-button (click)="myClickHandler()">Click me!</mbsc-button>
```

```ts
import { Component } from '@angular/core';
import { MbscModule } from '@mobiscroll/angular';

@Component({
  selector: 'app-root',
  templateUrl: './app.component.html',
  standalone: true,
  imports: [MbscModule],
})
export class AppComponent {}
```

<div className="option-list">

## Options
Explore the following API options that help you easily configure the Button component.

<Options />

## Localization
The Button component is fully localized. This covers date and time format, button copy, rtl and more.

<Localizations />

## Events
The Button component ships with different event hooks for deep customization. Events are triggered through the lifecycle of the component where you can tie in custom functionality and code.

<Events />

</div>

